--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@
 
    投稿时请：
    - 注明你的昵称，或 ID，总之是你想显示的作者名
-   - 如投稿的文章已经再其他地方发表，可以附上原文链接
+   - 如投稿的文章已经在其他地方发表，可以附上原文链接
 
 ** 关注公众号
    [[./images/qrcode.jpg]]
